--- a/notebooks/k-means.ipynb
+++ b/notebooks/k-means.ipynb
@@ -2,53 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# 极客时间 - 程序员基础数学课 - [第32课 - 文本聚类](https://time.geekbang.org/column/article/84949)\n",
     "\n",
     "使用欧氏距离的K-Means聚类算法"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "首先，我使用 sklearn 库中的 CountVectorizer，对一个测试的文档集合构建特征，也就是词典。这个测试集合有 7 句话，2 句关于篮球，2 句关于电影，还有 3 句关于游戏。具体代码如下："
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "source": [
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "\n",
-    "#模拟文档集合\n",
-    "corpus = ['I like great basketball game',\n",
-    "          'This video game is the best action game I have ever played',\n",
-    "          'I really really like basketball',\n",
-    "          'How about this movie? Is the plot great?',\n",
-    "          'Do you like RPG game?',\n",
-    "          'You can try this FPS game',\n",
-    "          'The movie is really great, so great! I enjoy the plot']\n",
-    "\n",
-    "#把文本中的词语转换为词典和相应的向量\n",
-    "vectorizer = CountVectorizer()\n",
-    "vectors = vectorizer.fit_transform(corpus)\n",
-    "\n",
-    "#输出所有的词条（所有维度的特征）\n",
-    "print('所有的词条（所有维度的特征）')\n",
-    "print(vectorizer.get_feature_names())\n",
-    "print('\\n')\n",
-    "\n",
-    "#输出(文章ID, 词条ID) 词频\n",
-    "print('(文章ID, 词条ID) 词频')\n",
-    "print(vectors)\n",
-    "print('\\n')"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "所有的词条（所有维度的特征）\n",
       "['about', 'action', 'basketball', 'best', 'can', 'do', 'enjoy', 'ever', 'fps', 'game', 'great', 'have', 'how', 'is', 'like', 'movie', 'played', 'plot', 'really', 'rpg', 'so', 'the', 'this', 'try', 'video', 'you']\n",
@@ -104,40 +79,48 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
+    "#模拟文档集合\n",
+    "corpus = ['I like great basketball game',\n",
+    "          'This video game is the best action game I have ever played',\n",
+    "          'I really really like basketball',\n",
+    "          'How about this movie? Is the plot great?',\n",
+    "          'Do you like RPG game?',\n",
+    "          'You can try this FPS game',\n",
+    "          'The movie is really great, so great! I enjoy the plot']\n",
+    "\n",
+    "#把文本中的词语转换为词典和相应的向量\n",
+    "vectorizer = CountVectorizer()\n",
+    "vectors = vectorizer.fit_transform(corpus)\n",
+    "\n",
+    "#输出所有的词条（所有维度的特征）\n",
+    "print('所有的词条（所有维度的特征）')\n",
+    "print(vectorizer.get_feature_names())\n",
+    "print('\\n')\n",
+    "\n",
+    "#输出(文章ID, 词条ID) 词频\n",
+    "print('(文章ID, 词条ID) 词频')\n",
+    "print(vectors)\n",
+    "print('\\n')"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "这里，我们希望使用比词频 tf 更好的 tf-idf 机制，TfidfTransformer 可以帮助我们做到这点，代码和注释如下："
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "source": [
-    "from sklearn.feature_extraction.text import TfidfTransformer\n",
-    "\n",
-    "#构建tfidf的值\n",
-    "transformer = TfidfTransformer()\n",
-    "tfidf = transformer.fit_transform(vectorizer.fit_transform(corpus))\n",
-    "\n",
-    "# 输出每个文档的向量\n",
-    "tfidf_array = tfidf.toarray()\n",
-    "words = vectorizer.get_feature_names()\n",
-    "\n",
-    "for i in range(len(tfidf_array)):\n",
-    "    print (\"*********第\", i + 1, \"个文档中，所有词语的tf-idf*********\")\n",
-    "    # 输出向量中每个维度的取值\n",
-    "    for j in range(len(words)):\n",
-    "        print(words[j], ' ', tfidf_array[i][j])\n",
-    "    print('\\n')"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "*********第 1 个文档中，所有词语的tf-idf*********\n",
       "about   0.0\n",
@@ -345,50 +328,40 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfTransformer\n",
+    "\n",
+    "#构建tfidf的值\n",
+    "transformer = TfidfTransformer()\n",
+    "tfidf = transformer.fit_transform(vectorizer.fit_transform(corpus))\n",
+    "\n",
+    "# 输出每个文档的向量\n",
+    "tfidf_array = tfidf.toarray()\n",
+    "words = vectorizer.get_feature_names()\n",
+    "\n",
+    "for i in range(len(tfidf_array)):\n",
+    "    print (\"*********第\", i + 1, \"个文档中，所有词语的tf-idf*********\")\n",
+    "    # 输出向量中每个维度的取值\n",
+    "    for j in range(len(words)):\n",
+    "        print(words[j], ' ', tfidf_array[i][j])\n",
+    "    print('\\n')"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "最后，我们就可以进行 K 均值聚类了。由于有篮球、电影和游戏 3 个类别，我选择的 K 是 3，并在 KMeans 的构造函数中设置 n_clusters 为 3。"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "source": [
-    "# 由于有篮球、电影和游戏 3 个类别，我选择的 K 是 3，并在 KMeans 的构造函数中设置 n_clusters 为 3\n",
-    "from sklearn.cluster import KMeans\n",
-    "\n",
-    "#进行聚类，在我这个版本里默认使用的是欧氏距离\n",
-    "clusters = KMeans(n_clusters=3)\n",
-    "s = clusters.fit(tfidf_array)\n",
-    "\n",
-    "#输出所有质心点，可以看到质心点的向量是组内成员向量的平均值\n",
-    "print('所有质心点的向量')\n",
-    "print(clusters.cluster_centers_)\n",
-    "print('\\n')\n",
-    "\n",
-    "#输出每个文档所属的分组\n",
-    "print('每个文档所属的分组')\n",
-    "print(clusters.labels_)\n",
-    "\n",
-    "#输出每个分组内的文档\n",
-    "dict = {}\n",
-    "for i in range(len(clusters.labels_)):\n",
-    "    label = clusters.labels_[i]\n",
-    "    if label not in dict.keys():\n",
-    "        dict[label] = []\n",
-    "        dict[label].append(corpus[i])\n",
-    "    else:\n",
-    "        dict[label].append(corpus[i])\n",
-    "print(dict)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "所有质心点的向量\n",
       "[[6.93889390e-18 1.10937337e-01 0.00000000e+00 1.10937337e-01\n",
@@ -420,37 +393,64 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "# 由于有篮球、电影和游戏 3 个类别，我选择的 K 是 3，并在 KMeans 的构造函数中设置 n_clusters 为 3\n",
+    "from sklearn.cluster import KMeans\n",
+    "\n",
+    "#进行聚类，在我这个版本里默认使用的是欧氏距离\n",
+    "clusters = KMeans(n_clusters=3)\n",
+    "s = clusters.fit(tfidf_array)\n",
+    "\n",
+    "#输出所有质心点，可以看到质心点的向量是组内成员向量的平均值\n",
+    "print('所有质心点的向量')\n",
+    "print(clusters.cluster_centers_)\n",
+    "print('\\n')\n",
+    "\n",
+    "#输出每个文档所属的分组\n",
+    "print('每个文档所属的分组')\n",
+    "print(clusters.labels_)\n",
+    "\n",
+    "#输出每个分组内的文档\n",
+    "dict = {}\n",
+    "for i in range(len(clusters.labels_)):\n",
+    "    label = clusters.labels_[i]\n",
+    "    if label not in dict.keys():\n",
+    "        dict[label] = []\n",
+    "        dict[label].append(corpus[i])\n",
+    "    else:\n",
+    "        dict[label].append(corpus[i])\n",
+    "print(dict)"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "不过，由于 KMeans 具体的实现可能不一样，而且初始质心的选择也有一定随机性，所以你看到的结果可能稍有不同。"
-   ],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "0d69a086a76f7e20863e6de2695623e8295efcfe999066b45114a493b12990cc"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.7 64-bit ('.venv': venv)",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.9.0",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.0 64-bit ('.venv': venv)"
-  },
-  "interpreter": {
-   "hash": "0d69a086a76f7e20863e6de2695623e8295efcfe999066b45114a493b12990cc"
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
