--- a/notebooks/pca.ipynb
+++ b/notebooks/pca.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# 极客时间 - 程序员基础数学课 - [第42课 - PCA主成因分析(上)](https://time.geekbang.org/column/article/87097)\n",
     "\n"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 课后题\n",
     "\n",
@@ -23,19 +24,30 @@
     "\n",
     "1. 按照列（也就是同一个特征维度）进行标准化。\n",
     "2. 生成这个矩阵的协方差矩阵。"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 自己解题"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  1.   3.  -7.]\n",
+      " [  2.   5. -14.]\n",
+      " [ -3.  -7.   2.]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -47,66 +59,67 @@
     "], np.double)\n",
     "\n",
     "print(A)"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[[  1.   3.  -7.]\n",
-      " [  2.   5. -14.]\n",
-      " [ -3.  -7.   2.]]\n"
-     ]
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "source": [
-    "# 计算每列的平均值\n",
-    "\n",
-    "A_mean = A.mean(axis=0)\n",
-    "print(\"计算每列的平均值:\")\n",
-    "print(A_mean)\n"
-   ],
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "计算每列的平均值:\n",
       "[ 0.          0.33333333 -6.33333333]\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "# 计算每列的平均值\n",
+    "\n",
+    "A_mean = A.mean(axis=0)\n",
+    "print(\"计算每列的平均值:\")\n",
+    "print(A_mean)\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "source": [
-    "# 计算每列标准差\n",
-    "A_stddev = A.std(axis=0)\n",
-    "print(\"计算每列的标准差:\")\n",
-    "print(A_stddev)"
-   ],
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "计算每列的标准差:\n",
       "[2.1602469  5.24933858 6.5489609 ]\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "# 计算每列标准差\n",
+    "A_stddev = A.std(axis=0)\n",
+    "print(\"计算每列的标准差:\")\n",
+    "print(A_stddev)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "每列标准化\n",
+      "[[ 0.46291005  0.50800051 -0.10179732]\n",
+      " [ 0.9258201   0.88900089 -1.17066918]\n",
+      " [-1.38873015 -1.3970014   1.2724665 ]]\n"
+     ]
+    }
+   ],
    "source": [
     "# 每列标准化\n",
     "A_std = np.zeros(A.shape, np.double)\n",
@@ -116,24 +129,26 @@
     "\n",
     "print(\"每列标准化\")\n",
     "print(A_std)"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "每列标准化\n",
-      "[[ 0.46291005  0.50800051 -0.10179732]\n",
-      " [ 0.9258201   0.88900089 -1.17066918]\n",
-      " [-1.38873015 -1.3970014   1.2724665 ]]\n"
-     ]
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "标准化后的平均值:\n",
+      "[ 0.00000000e+00  0.00000000e+00 -7.40148683e-17]\n",
+      "协方差矩阵:\n",
+      "[[ 1.5         1.4991357  -1.44903232]\n",
+      " [ 1.4991357   1.5        -1.43503825]\n",
+      " [-1.44903232 -1.43503825  1.5       ]]\n"
+     ]
+    }
+   ],
    "source": [
     "# 计算协方差矩阵\n",
     "\n",
@@ -159,35 +174,33 @@
     "\n",
     "print(\"协方差矩阵:\")\n",
     "print(Cov_matrix)"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "标准化后的平均值:\n",
-      "[ 0.00000000e+00  0.00000000e+00 -7.40148683e-17]\n",
-      "协方差矩阵:\n",
-      "[[ 1.5         1.4991357  -1.44903232]\n",
-      " [ 1.4991357   1.5        -1.43503825]\n",
-      " [-1.44903232 -1.43503825  1.5       ]]\n"
-     ]
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 答案\n",
     "\n",
     "极客时间 - 程序员基础数学课 - [PCA主成分分析（下）](https://time.geekbang.org/column/article/87337) 里提供的答案"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "标准化后的矩阵: \n",
+      " [[ 0.46291005  0.50800051 -0.10179732]\n",
+      " [ 0.9258201   0.88900089 -1.17066918]\n",
+      " [-1.38873015 -1.3970014   1.2724665 ]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from numpy import linalg as LA\n",
@@ -200,34 +213,16 @@
     "# scale 函数使用了 axis=0，表示对列进行标准化\n",
     "x_s = scale(x, with_mean=True, with_std=True, axis=0)\n",
     "print(\"标准化后的矩阵: \\n\", x_s)"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "标准化后的矩阵: \n",
-      " [[ 0.46291005  0.50800051 -0.10179732]\n",
-      " [ 0.9258201   0.88900089 -1.17066918]\n",
-      " [-1.38873015 -1.3970014   1.2724665 ]]\n"
-     ]
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "source": [
-    "# 计算协方差矩阵，注意这里需要先进行转置，因为这里的函数是看行与行之间的协方差\n",
-    "x_cov = np.cov(x_s.transpose())\n",
-    "# 输出协方差矩阵\n",
-    "print(\"协方差矩阵：\\n\", x_cov, \"\\n\")"
-   ],
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "协方差矩阵：\n",
       " [[ 1.5         1.4991357  -1.44903232]\n",
@@ -237,21 +232,21 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "# 计算协方差矩阵，注意这里需要先进行转置，因为这里的函数是看行与行之间的协方差\n",
+    "x_cov = np.cov(x_s.transpose())\n",
+    "# 输出协方差矩阵\n",
+    "print(\"协方差矩阵：\\n\", x_cov, \"\\n\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "source": [
-    "# 求协方差矩阵的特征值和特征向量\n",
-    "eigVals,eigVects = LA.eig(x_cov)\n",
-    "print(\"协方差矩阵的特征值：\", eigVals)\n",
-    "print(\"协方差的特征向量（主成分）：\\n\", eigVects, \"\\n\")"
-   ],
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "协方差矩阵的特征值： [ 4.42231151e+00 -3.76638147e-16  7.76884923e-02]\n",
       "协方差的特征向量（主成分）：\n",
@@ -262,11 +257,29 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "# 求协方差矩阵的特征值和特征向量\n",
+    "eigVals,eigVects = LA.eig(x_cov)\n",
+    "print(\"协方差矩阵的特征值：\", eigVals)\n",
+    "print(\"协方差的特征向量（主成分）：\\n\", eigVects, \"\\n\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "最大的特征值： 4.422311507725755\n",
+      "最大特征值所对应的特征向量： [-0.58077228 -0.57896098  0.57228292]\n",
+      "变换后的数据矩阵： [-0.62121467 -1.72234145  2.34355612] \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 找到最大的特征值，及其对应的特征向量\n",
     "max_eigVal = -1\n",
@@ -285,31 +298,35 @@
     "\n",
     "# 输出变换后的数据矩阵。注意，这里的三个值是表示三个样本，而特征从3维变为1维了。\n",
     "print(\"变换后的数据矩阵：\", x_s.dot(eigVect_with_max_eigVal), \"\\n\")"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "最大的特征值： 4.422311507725755\n",
-      "最大特征值所对应的特征向量： [-0.58077228 -0.57896098  0.57228292]\n",
-      "变换后的数据矩阵： [-0.62121467 -1.72234145  2.34355612] \n",
-      "\n"
-     ]
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### 直接利用sklearn的PCA"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "方差（特征值）:  [4.42231151]\n",
+      "主成分（特征向量） [[-0.58077228 -0.57896098  0.57228292]]\n",
+      "变换后的样本矩阵: \n",
+      " [[-0.62121467]\n",
+      " [-1.72234145]\n",
+      " [ 2.34355612]]\n",
+      "信息量:\n",
+      " [0.98273589]\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.decomposition import PCA\n",
     "\n",
@@ -324,55 +341,37 @@
     "print(\"主成分（特征向量）\", pca.components_)\n",
     "print(\"变换后的样本矩阵: \\n\", pca.transform(x_s))\n",
     "print(\"信息量:\\n\", pca.explained_variance_ratio_)"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "方差（特征值）:  [4.42231151 0.07768849]\n",
-      "主成分（特征向量） [[-0.58077228 -0.57896098  0.57228292]\n",
-      " [ 0.3282358   0.47677453  0.81544301]]\n",
-      "变换后的样本矩阵: \n",
-      " [[-0.62121467  0.31113544]\n",
-      " [-1.72234145 -0.22687371]\n",
-      " [ 2.34355612 -0.08426173]]\n",
-      "信息量:\n",
-      " [0.98273589 0.01726411]\n"
-     ]
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "第一个主成分包含了原始样本矩阵中的 98.27% 的信息，而第二个主成分包含了原始样本矩阵中的 1.73% 的信息"
-   ],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "0d69a086a76f7e20863e6de2695623e8295efcfe999066b45114a493b12990cc"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.7 64-bit ('.venv': venv)",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.9.0",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.0 64-bit ('.venv': venv)"
-  },
-  "interpreter": {
-   "hash": "1a51613496dca5700e796d7338249185c778c41eb30ce5d14dfda6fd6a0b9605"
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
